@@ -3,6 +3,7 @@
 #include "zeek/ScannedFile.h"
 
 #include <cerrno>
+#include <filesystem>
 
 #include "zeek/DebugLogger.h"
 #include "zeek/Reporter.h"
@@ -22,7 +23,7 @@ ScannedFile::ScannedFile(int arg_include_level, std::string arg_name, bool arg_s
         canonical_path = canonical_stdin_path;
     else if ( ! arg_is_canonical ) {
         std::error_code ec;
-        auto canon = filesystem::canonical(name, ec);
+        auto canon = std::filesystem::canonical(name, ec);
         if ( ec )
             zeek::reporter->FatalError("failed to get canonical path of %s: %s", name.data(), ec.message().c_str());
 
